pages/menu/styles.css
* {
  color: rgb(0, 0, 0);
  font-family: "Times New Roman", sans-serif;
  font-size: 12px;
  font-weight: 500;
}

/* header */

header {
  background-color: #faa331a0;
  margin: 10px;
  padding: 5px;
  margin-bottom: -10px;
}

.subtitle {
  color: #110b03e1;
  font-size: larger;
  font-weight: bold;
}

nav {
  background-color: #faa331a0;
  border: #744508a0;
  border-style:inset;
  text-align: right;
  padding-right: 30px;
  margin: 5px;
  
}

li {
  display: inline;
  margin: 10px;
}

.navlink {
  font-size: 13px;
  font-weight: bolder;
}

/* main */
main {
  background-color: #faa331a0;
  padding: 10px;
  margin: 10px;
  margin-bottom: -12px;
  padding-bottom: 25px;
}

img {
  width: 80%;
  padding: 10px;
  background-color: rgba(255, 255, 255, 0.739);
  margin: 10px;
}

.flex-container {
  display: flex;
  flex-direction: column;
}

.flex-container table {
  border: 2px solid #341f03d6;
  border-style: dotted;
  flex: auto;
  margin-top: 10px;
  margin-bottom: 10px;;
}

.pratos-dia p {
  font-size: 14px;
}

.menu-table-head {
  text-align: left;
  background-color: #faa331a0;
  font-weight: 700;
}

td {
  background-color: rgba(224, 146, 20, 0.229);
  width: 33%;
}

.item {
  width: 95%;
}
.preço {
  text-align: center;
}

/* pratos-dia */

.pratos-dia .menu-table-head{
  text-align: center;
  font-size: 20px;
}
.pratos-dia td {
  text-align: center;
}




/* footer */

footer {
  background-color: #f19217d8;
  padding: 10px;
  margin: 10px;
  text-align: center;
}

